--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="./dist/main.js"></script>
+    <title>Title2</title>
 </head>
 <body>
     <div id="root"></div>
