--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title2</title>
+    <title>SpriteGenerator</title>
 </head>
 <body>
     <div id="root"></div>
